# libcxlmi_old

./: README.md  TODO  meson.build  meson_options.txt
ccan/: meson.build
ccan/ccan/endian/: endian.h
ccan/ccan/minmax/: minmax.h
docs/: FM-API.md  Generic-Component-Commands.md  Memory-Device-Commands.md  generic_component_cmds.md
examples/: cxl-ioctl.c  cxl-mctp.c  cxl-mctp.c~  meson.build
src/: cxlmi.c  libcxlmi.h  meson.build  types.h  utils.c
src/cxlmi/: api-types.h  commands.c  cxlmi.c  log.c  log.h  private.h
tests/: api-simple-tests.c  api-simple.c  meson.build
